# dao-ai-builder

./: .gitignore  .gitleaks.toml  .gitleaksignore  README.md  app.py  app.yaml  databricks.yml  deploy.sh  main.py  pyproject.toml  requirements.txt  run.sh
backend/: main.py  requirements.txt
backend/static/: index.html
backend/static/assets/: index-BK5ikdRJ.js  index-BK5ikdRJ.js.map  index-BRR5Vigy.css
docs/: IMPLEMENTATION.md
frontend/: QUICKSTART.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: model_config_schema.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatPanel.tsx  VegaLiteChart.tsx
frontend/src/components/deployment/: DeploymentPanel.tsx
frontend/src/components/layout/: ConfigPanel.tsx  Header.tsx  PreviewPanel.tsx  Sidebar.tsx
frontend/src/components/sections/: AgentsSection.tsx  AppConfigSection.tsx  EvaluationSection.tsx  GuardrailsSection.tsx  MemorySection.tsx  MiddlewareSection.tsx  OverviewSection.tsx  PromptsSection.tsx  ResourcesSection.tsx  RetrieversSection.tsx  SchemasSection.tsx  ServicePrincipalsSection.tsx  ToolsSection.tsx  VariablesSection.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConnectionStatus.tsx  DatabricksConfigModal.tsx  DatabricksSelect.tsx  Input.tsx  Modal.tsx  MultiSelect.tsx  ResourceAuthSection.tsx  Select.tsx  StatusSelect.tsx  Textarea.tsx  ToggleButtonGroup.tsx  ValidationStatus.tsx
frontend/src/components/visualization/: GraphVisualization.tsx
frontend/src/hooks/: useDatabricks.ts  useValidation.ts
frontend/src/services/: databricksNativeApi.ts
frontend/src/stores/: chatStore.ts  configStore.ts  deploymentStore.ts
frontend/src/types/: dao-ai-types.ts
frontend/src/utils/: dependency-check.ts  name-utils.ts  safe-delete.ts  schema-validator.ts  yaml-generator.ts  yaml-references.ts
schemas/: model_config_schema.json
static/: index.html  model_config_schema.json
static/assets/: index-0kuo1r06.js  index-1C3eemwY.css  index-B-4lUi_d.js  index-B1sZwp0I.js  index-B6gSGiRi.css  index-B8EWF8Kp.js  index-B8EWF8Kp.js.map  index-B9DzkSCN.js  index-B9DzkSCN.js.map  index-BD5bnIqu.js  index-BD5bnIqu.js.map  index-BMi0daPa.js  index-BRtDY8H0.js  index-BRtDY8H0.js.map  index-BVkSWOfW.js  index-BVkSWOfW.js.map  index-BYfusf8A.css  index-BbvdeIZu.css  index-BdW79eaj.js  index-Bw5Z0dAo.js  index-C3OCWs1a.css  index-CF0fVFLE.css  index-CGhAbLaP.js  index-CHAD0HqZ.css  index-CHqCtX5p.js  index-CHqCtX5p.js.map  index-CJXMq1FP.js  index-CJXMq1FP.js.map  index-CNPKkeBh.js  index-CNPKkeBh.js.map  index-CPOefaSK.js  index-CPOefaSK.js.map  index-CYw1oYNh.js  index-ClCMsieD.js  index-CnRGZfbi.js  index-Cp7j1xz4.js  index-CqtIeNLC.js  index-D1uAz-ZH.js  index-D1uAz-ZH.js.map  index-D8__9zbH.js  (+29 more)
