[project]
name = "dao-ai-builder"
version = "0.1.0"
description = "Visual configuration builder for Databricks Agent-Orchestrated Applications (DAO-AI) with real-time YAML generation, deployment management, and interactive testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    # dao-ai 0.1.80 ships Google A2A (Agent2Agent) v0.3 protocol support
    # on Databricks Apps deployments. The new surface on AppModel:
    #   * `a2a: A2AModel` (concrete default; enabled-by-default on Apps)
    #   * `A2ATaskStoreModel { database, table }` replaces the prior
    #     Literal["auto","in_memory","lakebase"] selector + sibling table name
    #   * `security_schemes` is typed against a2a-sdk's `SecurityScheme`
    #     discriminated union (validated at config load)
    #   * `A2AModel.on_behalf_of_user: Optional[bool]` three-state
    #     (None=auto-derive from any resource OBO; True/False pin explicitly)
    #     -- moved off `AppModel.on_behalf_of_user`, which was removed.
    # The builder's TypeScript mirrors these in dao-ai-types.ts; the
    # AppConfigSection gains an "A2A Protocol" subsection.
    # 0.1.77 carried `ai_gateway: bool` on InferenceEndpointModel (still
    # supported). 0.1.75 renamed `resources.llms` -> `resources.models`
    # and `LLMModel` -> `InferenceEndpointModel` (back-compat aliases on
    # the dao-ai side).
    "dao-ai>=0.1.80",
    "databricks-sdk>=0.74.0",
    "mlflow[databricks]>=3.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
dao-ai-builder = "app:main"
