[project]
name = "dao-ai-builder"
version = "0.1.0"
description = "Visual configuration builder for Databricks Agent-Orchestrated Applications (DAO-AI) with real-time YAML generation, deployment management, and interactive testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    # dao-ai 0.1.99 expanded FunctionType with six first-class shortcut
    # tool types parsed directly (no factory wrapper):
    #   * type: genie             - GenieToolModel (genie_room + flags)
    #   * type: vector_search     - VectorSearchToolModel (retriever | vector_store)
    #   * type: search            - SearchToolModel (no args)
    #   * type: app               - AppToolModel (Databricks App + api selector)
    #   * type: serving_endpoint  - ServingEndpointToolModel (endpoint + api)
    #   * type: a2a               - A2AToolModel (endpoint OR app, 5-state auth)
    # The legacy factory form (type: factory + name: dao_ai.tools.create_*)
    # still works; the builder now emits the shortcut form by default.
    # Other AppModel changes the builder mirrors:
    #   * `long_running` -> `background` (and `default_background` ->
    #     `default_enabled`). Builder reads legacy, emits new name.
    #   * `space: Optional[str]` -- App Spaces (Private Preview)
    #   * `mcp_only: bool` -- skip agent-required validators
    #   * `trace_location` accepts "catalog.schema" shorthand and gained
    #     optional `table_prefix` to namespace OTEL trace tables.
    # 0.1.80 shipped Google A2A v0.3 (A2AModel, A2ATaskStoreModel,
    # security_schemes, on_behalf_of_user three-state). 0.1.77 carried
    # `ai_gateway: bool` on InferenceEndpointModel. 0.1.75 renamed
    # `resources.llms` -> `resources.models`.
    "dao-ai>=0.1.99",
    "databricks-sdk>=0.74.0",
    "mlflow[databricks]>=3.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
dao-ai-builder = "app:main"
